Tue Apr  8 18:52:36 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: new version of patch from Peter Pawlowski

Tue Apr  8 10:19:01 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* python/generator.py: fix an infinite loop bug

Thu Apr  3 09:32:49 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: avoid a scary realloc() loop should fix #520383

Thu Apr  3 07:32:36 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: applied patch from Peter Pawlowski  fixing
	  a timezone offset problem, fixes #521680
	* libxslt/namespaces.c: a bit of space/tabs cleanup

Thu Apr  3 06:25:02 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.xml doc/xsltproc.1 doc/xsltproc.html: small fix to
	  man page synopsis, should fix #525822

Sat Mar 15 11:13:18 HKT 2008 William Brack <wbrack@mmm.com.hk>

	* libexslt/functions.c: fixed minor error reported on the mailing
	 list by Mark Howe, which caused a segfault if func:result was
	 postitioned as top-level element.

Thu Mar 13 09:33:21 CET 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/win32config.h: patch from Rob Richards for VS 2008
	* python/types.c: fix a problem with namespace nodes coming from
	  XPath nodesets.

Mon Mar  3 09:39:31 CET 2008 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.xml doc/xsltproc.1: fix maxdepth default value
	  documentation fixes #519921.

Sat Feb 16 01:24:58 HKT 2008 William Brack <wbrack@mmm.com.hk>

	*libxslt/extensions.c: fixed minor error bug #516483
	*tests/exslt/common - deleted node-set.9 regression test,
	 because it relied upon an external web import.

Tue Feb  5 08:53:30 CET 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: applied documentation patch from Jason Viers
	  for xsltParseStylesheetDoc

Tue Feb  5 08:36:53 CET 2008 Daniel Veillard <daniel@veillard.com>

	* python/tests/pyxsltproc.py: applied a portability patch from 
	  Stephane Bidoul
