@@ -304,6 +304,21 @@ to the <a href="http://svn.gnome.org/viewcvs/libxslt/trunk/">SVN</a> code base.<
 
 <p>Those are the public releases made:</p>
 
+<h3>1.1.23: Apr  8 2008</h3>
+<ul>
+  <li>Documentation: fix links for Cygwin DocBook setup (Philippe Bourcier),
+      xsltParseStylesheetDoc doc fix (Jason Viers), fix manpage default
+      maxdepth value </li>
+  <li>Bug fixes: python segfault (Daniel Gryniewicz), week-in-year bug fix
+      (Maurice van der Pot), fix python iterator problem (William Brack),
+      avoid garbage collection problems on str:tokenize and str:split
+      and function results (William Brack and Peter Pawlowski) 
+      superfluous re-generation of keys (William Brack), remove superfluous
+      code in xsltExtInitTest (Tony Graham), func:result segfault fix
+      (William Brack), timezone offset problem (Peter Pawlowski),</li>
+  <li>Portability fixes: old gcrypt support fix (Brent Cowgill), Python
+      portability patch (Stephane Bidoul), VS 2008 fix (Rob Richard) </li>
+</ul>
 <h3>1.1.22: Aug 23 2007</h3>
 <ul>
   <li>Bug fixes: RVT cleanup problems (William Brack), exclude-result-prefix
