@@ -23,21 +23,21 @@ extern "C" {
  *
  * the version string like "1.2.3"
  */
-#define LIBXSLT_DOTTED_VERSION "1.1.22"
+#define LIBXSLT_DOTTED_VERSION "1.1.23"
 
 /**
  * LIBXSLT_VERSION:
  *
  * the version number: 1.2.3 value is 1002003
  */
-#define LIBXSLT_VERSION 10122
+#define LIBXSLT_VERSION 10123
 
 /**
  * LIBXSLT_VERSION_STRING:
  *
  * the version number string, 1.2.3 value is "1002003"
  */
-#define LIBXSLT_VERSION_STRING "10122"
+#define LIBXSLT_VERSION_STRING "10123"
 
 /**
  * LIBXSLT_VERSION_EXTRA:
