@@ -142,6 +142,7 @@ Class transformCtxt(transformCtxtBase)
     createRVT()
     extensionInstructionResultFinalize()
     freeRVTs()
+    initAllDocKeys()
     registerLocalRVT()
     registerPersistRVT()
     registerTmpRVT()
